// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<List /> renders correctly 1`] = `
.c0 {
  margin: 1rem 0;
  padding-left: 2rem;
}

<ul
  className="c0"
>
  <ListItem>
    Hello Item 1
  </ListItem>
  <ListItem>
    Hello Item 2
  </ListItem>
  <ListItem>
    Hello Item 3
  </ListItem>
</ul>
`;

exports[`<List /> with columns set renders correctly 1`] = `
.c0 {
  margin: 1rem 0;
  padding-left: 2rem;
  list-style-position: inside;
  padding-left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: -0.5rem;
  margin-right: -0.5rem;
}

.c0 .ListItem-cYZMMi {
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  padding: 0 0.5rem;
  -webkit-flex-basis: 33.333333333333336%;
  -ms-flex-preferred-size: 33.333333333333336%;
  flex-basis: 33.333333333333336%;
}

<ul
  className="c0"
>
  <ListItem>
    Hello Item 1
  </ListItem>
  <ListItem>
    Hello Item 2
  </ListItem>
  <ListItem>
    Hello Item 3
  </ListItem>
</ul>
`;

exports[`<List /> with flush set renders correctly 1`] = `
.c0 {
  margin: 1rem 0;
  padding-left: 2rem;
  list-style-position: inside;
  padding-left: 0;
}

<ul
  className="c0"
>
  <ListItem>
    Hello Item 1
  </ListItem>
  <ListItem>
    Hello Item 2
  </ListItem>
  <ListItem>
    Hello Item 3
  </ListItem>
</ul>
`;

exports[`<List /> with ordered prop renders correctly 1`] = `
.c0 {
  margin: 1rem 0;
  padding-left: 2rem;
}

<ol
  className="c0"
>
  <ListItem>
    Hello Item 1
  </ListItem>
  <ListItem>
    Hello Item 2
  </ListItem>
  <ListItem>
    Hello Item 3
  </ListItem>
</ol>
`;

exports[`<List /> with responsive columns set renders correctly 1`] = `
.c0 {
  margin: 1rem 0;
  padding-left: 2rem;
  list-style-position: inside;
  padding-left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: -0.5rem;
  margin-right: -0.5rem;
}

.c0 .ListItem-cYZMMi {
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  padding: 0 0.5rem;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
}

@media screen and (min-width:40rem) {
  .c0 .ListItem-cYZMMi {
    -webkit-flex-basis: 50%;
    -ms-flex-preferred-size: 50%;
    flex-basis: 50%;
  }
}

@media screen and (min-width:52rem) {
  .c0 .ListItem-cYZMMi {
    -webkit-flex-basis: 33.333333333333336%;
    -ms-flex-preferred-size: 33.333333333333336%;
    flex-basis: 33.333333333333336%;
  }
}

<ul
  className="c0"
>
  <ListItem>
    Hello Item 1
  </ListItem>
  <ListItem>
    Hello Item 2
  </ListItem>
  <ListItem>
    Hello Item 3
  </ListItem>
</ul>
`;
